# tabulae

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: build-container-image.yml
docs/: FromPython.md  Tabulae_Demo.ipynb
frontend/: index.html  package.json  vite.config.ts
frontend/lib/: types.ts
frontend/src/: App.tsx  index.css
queries/layer1/: chembl_activity_value.rq  chembl_compound-atc-classification.rq  chembl_compound-drug_indication_mesh.rq  chembl_compound-mw.rq  chembl_compound-uniprot-via-drug_mechanism.rq  chembl_compound_activity_value_uniprot.rq  chembl_compound_alogp.rq  chembl_compound_chebi.rq  chembl_compound_chembl_activity.rq  chembl_compound_drug_indication_highest_development_phase.rq  chembl_compound_hba.rq  chembl_compound_hbd.rq  chembl_compound_psa.rq  chembl_compound_pubchem.rq  chembl_compound_ro5.rq  chembl_compound_smiles.rq  chembl_compound_uniprot_via_activity_assay.rq  clinvar-medgen-via-Med2RDF.rq  clinvar-medgen-via-RCV.rq  clinvar_clinical_significance.rq  clinvar_medgen_via_reference.rq  clinvar_ncbigene.rq  medgen_mesh.rq  medgen_ncbigene.rq  reactome_pathway-uniprot.rq  reactome_pathway_uniprot.rq  uniprot-go_molecular_function.rq  uniprot-pfam.rq  uniprot_ncbigene.rq  uniprot_protein-domain-interpro.rq  uniprot_protein-go-biological_process.rq  uniprot_protein-protein.rq  (+3 more)
src/: duckdb_util.rs  export.rs  frontend.rs  layer1.rs  layer2.rs  main.rs  manifest.rs  sparql_client.rs  sparql_query_metadata.rs  sparql_query_modifier.rs  sparql_result_to_duckdb.rs  used_queries.rs
(+8 files in other folders)
