[package]
name = "tabulae"
version = "0.1.0"
edition = "2024"

[features]
frontend = []

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
duckdb = { git = "https://github.com/duckdb/duckdb-rs", tag = "v1.4.4", version = "1.4.4", features = ["bundled"] }
env_logger = "0.11.9"
futures-util = "0.3.32"
glob = "0.3.3"
indicatif = "0.18.4"
log = "0.4.29"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
spargebra = "0.4.5"
tar = "0.4.44"
tempfile = "3.27.0"
tokio = { version = "1.50.0", features = ["macros"] }
